chore: use stable serverpod version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,14 @@
 name: launchpad
 description: The missing dependency injection library for serverpod
 version: 0.0.1
+repository: https://github.com/thecodebrothers/launchpad
 
 environment:
   sdk: ^3.0.0
 
 dependencies:
   get_it: ^9.0.5
-  serverpod: ^3.0.0-alpha.3
+  serverpod: ^2.9.2
 
 dev_dependencies:
   lints: ^6.0.0
